--- a/drivers/media/rc/Kconfig
+++ b/drivers/media/rc/Kconfig
@@ -14,6 +14,13 @@ menuconfig RC_CORE
 
 	  Say Y when you have a TV or an IR device.
 
+config SPI_PEELIR
+	tristate "PEELIR"
+	default n
+
+	---help---
+	   Enable this option if you use peelir
+
 if RC_CORE
 source "drivers/media/rc/keymaps/Kconfig"
 
